[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
# fast stack based string formatting.
aformat = "0.1.8"
to-arraystring = "0.2.2"

clap = { version = "4.5.32", features = ["derive"] }
dotenvy = "0.15.7"
hsv = "0.1.1"
image = "0.25.5"
palette = "0.7.6"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] } # sqlite
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # async
